# CppLab

./: .gitignore  CMakeCache.txt  LICENSE  Makefile  README.md  cmake_install.cmake
Lab2/: CMakeLists.txt  main.cpp
Lab3/: CMakeLists.txt  Person.cpp  Person.h  PersonExempel.txt  PersonMedTel.cpp  PersonMedTel.h  PersonReg.cpp  PersonReg.h  main.cpp
Lab4/: CMakeLists.txt  Person.cpp  Person.h  PersonReg.cpp  PersonReg.h  main.cpp
Lab4Remake/: CMakeLists.txt  Person.cpp  Person.h  PersonReg.h  main.cpp
Lab5/: CMakeLists.txt  String.cpp  String.h  main.cpp
Lab6/: Add.cpp  Add.h  BubbleSort.cpp  BubbleSort.h  CMakeLists.txt  Multiply.cpp  Multiply.h  OperationAdd.cpp  OperationAdd.h  OperationsInterface.cpp  OperationsInterface.h  Operator.cpp  Operator.h  SortAlgInterface.h  StdSort.cpp  StdSort.h  Subtract.cpp  Subtract.h  main.cpp
test1/: main.cpp
testing/: CMakeLists.txt  main.cpp
